doc: thesis actually some typos were left...

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -267,7 +267,7 @@ Theoretisch lassen sich durch die Verwendung dieser Konstanten und das Berechnen
 
 \subsubsection{Binned Surface Area Heuristic}
 
-Die Binned Surface Area Heuristic (BSAH) ist eine Abwandlung der SAH. Sie verwendet das gleiche Kostenmodell, hat allerdings einen implementationsspezifischen Unterschied. Statt Splits zwischen jeden Primitives zuzulassen, werden die Primitives vorerst entlang der Achse in eine beliebige Menge Bins, im diesem Falle 16, einsortiert. Dann wird der optimale Split zwischen diesen Bins ermittelt. Der Vorteil ist, dass lediglich ein Bruchteil an Berechnungen gemacht werden muss, um einen Split zu berechnen. Dieser Gewinn in der Construction-Time geht allerdings gegebenenfalls auf Kosten der BVH-Qualität.
+Die Binned Surface Area Heuristic (BSAH) ist eine Abwandlung der SAH. Sie verwendet das gleiche Kostenmodell, hat allerdings einen implementationsspezifischen Unterschied. Statt Splits zwischen jedem Primitive zuzulassen, werden die Primitives vorerst entlang der Achse in eine beliebige Menge Bins, im diesem Falle 16, einsortiert. Dann wird der optimale Split zwischen diesen Bins ermittelt. Der Vorteil ist, dass lediglich ein Bruchteil an Berechnungen gemacht werden muss, um einen Split zu berechnen. Dieser Gewinn in der Construction-Time geht allerdings gegebenenfalls auf Kosten der BVH-Qualität.
 
 \newpage
 
@@ -485,7 +485,7 @@ end function
 
 \subsubsection{Median Split}
 
-Der Median-Split ist die einfachste Variante einer Split-Funtion. Die Menge der Primitives wird in, vom Verzweigungsgrad abhängige, gleichgroße Teile gespalten. Dafür wird die Menge der Primitives $n$ durch den Verzweigungsgrad geteilt um die Größe einer Teilmenge zu bestimmen. Vielfache dieser Zahl innerhalb des Intervalls $(0, n)$ werden als Indizes für das Splitting verwendet. Allerdings muss dafür noch die Menge an Primitives, entlang der gegebenen Achse, partiell Sortiert werden. Dies geschiet, sodass für alle Indizes gilt, dass der Mittelpunkt der Position der Primitives links des Index kleiner sind als die rechts des Indexes.   
+Der Median-Split ist die einfachste Variante einer Split-Funtion. Die Menge der Primitives wird in, vom Verzweigungsgrad abhängige, gleichgroße Teile gespalten. Dafür wird die Menge der Primitives $n$ durch den Verzweigungsgrad geteilt um die Größe einer Teilmenge zu bestimmen. Vielfache dieser Zahl innerhalb des Intervalls $(0, n)$ werden als Indizes für das Splitting verwendet. Allerdings muss dafür noch die Menge an Primitives, entlang der gegebenen Achse, partiell Sortiert werden. Dies geschieht, sodass für alle Indizes gilt, dass der Mittelpunkt der Position der Primitives links des Index kleiner sind als die rechts des Indexes.   
 
 \begin{lstlisting}[style=codestyle,caption={Median Partition}]
 function medianSplit(primitives, axis, degree):
@@ -774,7 +774,7 @@ Insgesamt schließen die Konfidenzintervalle aus der Tabelle~\ref{tab:dynamic} d
 \section{Interpretation: Einfluss des Verzweigungsgrades auf die Traversal}
 Vorher wurde gezeigt, dass es teilweise Einsparung in der Traversal-Time für $k = 4$ gegenüber der binären Referenz gab, während es für $k \in \{8, 16\}$ in jedem untersuchten Fall starke Einbußen in der Performance gab.
 
-Für $k = 4$ liegen die Werte bei Nutzung des k-way splittings für Median-Split sowie SAH sowohl über als auch unter $1$ und näheren sich für die größeren untersuchten Modelle immer mehr in Richtung $1$ an. Unter Nutzung des Collapsing-Verfahrens sind die Speedups deutlich wertstabiler. Hier lassen sich klare Negativtrends für den Median-Split und Positivtrends für SAH und BSAH ablesen. Über die verschiedenen $k$ folgen allerdings alle Splitting-Algorithmen dem gleichen Trend.
+Für $k = 4$ liegen die Werte bei Nutzung des k-way splittings für Median-Split sowie SAH sowohl über als auch unter $1$ und nähern sich für die größeren untersuchten Modelle immer mehr in Richtung $1$ an. Unter Nutzung des Collapsing-Verfahrens sind die Speedups deutlich wertstabiler. Hier lassen sich klare Negativtrends für den Median-Split und Positivtrends für SAH und BSAH ablesen. Über die verschiedenen $k$ folgen allerdings alle Splitting-Algorithmen dem gleichen Trend.
 Eine plausible Erklärung für die, bis auf den Median-Split, konstante Verbessserung der Ergebnisse, im Fall $k = 4$ mit collapsing, ist ein Abwägung zwischen der Anzahl an inneren Nodes und der Anzahl an auszuführenden AABB-Tests bzw. Kollisionsüberprüfungen zwischen Primärstrahl und Bounding Boxen. Bei höheren Verzweigungsgraden müssen nämlich pro Node mehr Kinder überprüft werden, während es insgesamt aber auch weniger innere Nodes gibt, die überhaupt überprüft werden können. Es lässt sich interpretieren, dass für $k = 4$ die Menge an weniger besuchten Nodes die größere Menge an AABB-Tests noch in den meisten Fällen überkompensiert, während dies ab $k = 8$ nicht mehr der Fall ist. Zur Veranschaulichung dient Abbildung~\ref{fig:aabb-example-collaping} in der man Beispielhaft die Menge an AABB-Tests und Triangle-Tests, bzw. Primärstrahl und Polygon Kollisionen, ablesen kann. 
 \begin{figure}[h]
     \centering
@@ -794,7 +794,7 @@ Zudem ist wichtig, dass der für $k = 4$ beobachtete Effekt zwar statistisch sig
 \section{Interpretation: K-way splitting gegen collapsing}
 Im Rahmen der Ergebnissvorstellung wurde gezeigt, dass die Messergebnisse für $k = 4$ stark abhängig von der gewählten Szene und dem gewählten Splitting-Algorithmus ausfallen. Die konstante Überlegenheit einer Wide BVH Erzeugungsmethode über alle Kombinationen lässt sich hier nicht erkennen. Interessanter ist das verhalten für steigende $k$. Für untersuchte $k \ge 8$ dominiert das k-way splitting ausnahmslos mit Speedups bis zu einer 6-fachen Geschwindigkeit.
 
-Die naheliegendste Erklärung ist auch hier wieder die die Menge an ausgeführten AABB- und Triange-Tests. Es zeigt sich, dass bei Nutzung von collapsing zwar konstant weniger Triangle- bzw. Primitive-Tests durchgeführt werden, es allerdings bei $k = 8$ eine Art Trendumkehrung gibt. Die Menge an eingesparten positiven AABB-Tests reicht nicht mehr aus um die Menge an negativen AABB-Tests und Triangle-Tests zu amortisieren. Beispielhaft lässt sich dies an Abbildung~\ref{fig:aabb-example-mixed} ablesen. Die Nutzung von k-way splitting schein die Menge von negativen AABB-Tests auf kosten von mehr Triangle-Tests konstant niedriger zu halten, während die Menge an negativen AABB-Test fürs collapsing nahezu explodiert. Dies lässt die Vermutung zu, dass collaping deutlich mehr überschneidene AABBs auf hohen Ebenen erzeugt, während es für k-way splitting eher Überschneidungen auf tieferen Ebenen gibt. Da es sehr viel mehr innere Nodes als Primitives gibt, fällt der Effekt deshalb so ungleichmäßig aus. Für $k = 16$ ist der Baum so breit, dass der Effekt auf die Spitze getrieben wird.
+Die naheliegendste Erklärung ist auch hier wieder die die Menge an ausgeführten AABB- und Triange-Tests. Es zeigt sich, dass bei Nutzung von collapsing zwar konstant weniger Triangle- bzw. Primitive-Tests durchgeführt werden, es allerdings bei $k = 8$ eine Art Trendumkehrung gibt. Die Menge an eingesparten positiven AABB-Tests reicht nicht mehr aus um die Menge an negativen AABB-Tests und Triangle-Tests zu amortisieren. Beispielhaft lässt sich dies an Abbildung~\ref{fig:aabb-example-mixed} ablesen. Die Nutzung von k-way splitting schein die Menge von negativen AABB-Tests auf kosten von mehr Triangle-Tests konstant niedriger zu halten, während die Menge an negativen AABB-Test fürs collapsing nahezu explodiert. Dies lässt die Vermutung zu, dass collaping deutlich mehr überschneidene AABBs auf hohen Ebenen erzeugt, während es für k-way splitting eher Überschneidungen auf tieferen Ebenen gibt. Da es sehr viel mehr innere Nodes als Primitives gibt, fällt der Effekt deshalb so ungleichmäßig aus. Für $k = 16$ ist der Baum so breit, dass der Effekt sein Maximum erreicht.
 \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{results/rq2/hit_ray_analysis_mixed.png}
@@ -832,11 +832,11 @@ Alle besprochenen Ergebnisse gelten innerhalb der folgenden Annahmen:
 Darüber hinaus sorgt die Menge an lediglich vier untersuchten Szenen, sowie ihre ähnliche Beschaffenheit für eine begrenzte Aussagekraft. Die Verteilung der untersuchten Rays ergibt sich aus der vorgegebenen Kamerafahrt um den Ursprung der Szene und nicht aus der Untersuchung von Sekundärstrahlen durch z.B. die Berechnung von Schatten. Metriken wie AABB- und Triangle-Tests wurde nur für ausgewählte Beispiele erhoben und bieten keine Grundlage für eine ausgiebige Analyse. Für klare Belege der im Diskussionsteil besprochenen Thesen sind weitere messungen und statistische Analyse von nöten. 
 
 \section{Ausblick}
-Fortlaufend bietet es sich an die Stichprobe an Szenen zu erweitern. Mehr und vor allem größere Szenen, sowie komplexere Szenen mit Kameraursprung innerhalb der Szene bieten Forschungsspielraum. Zudem wäre eine Untersuchung, die nicht nur Primärstrahlen überprüft, sondern auch Shadingeffekte, durch z.B. \emph{Ambient Occlusion}, denkbar. Auch wäre eine quantitative Untersuchung der AABB- und Triangle-Tests sinnvoll, um die hier genannten Erklärungen zu untermauern. Auf algoritmischer Ebene wäre eine Untersuchung verschiedener Bin-Größen für BSAH von Interesse, sowie unterschiedliche Abbruchkriterien bei der Konstruktion. 
+Fortlaufend bietet es sich an die Stichprobe an Szenen zu erweitern. Mehr und vor allem größere Szenen, sowie komplexere Szenen mit Kameraursprung innerhalb der Szene bieten Forschungsspielraum. Zudem wäre eine Untersuchung, die nicht nur Primärstrahlen überprüft, sondern auch Shadingeffekte, durch z.B. \emph{Ambient Occlusion}, denkbar. Auch wäre eine quantitative Untersuchung der AABB- und Triangle-Tests sinnvoll, um die hier genannten Erklärungen zu untermauern. Auf algorithmischer Ebene wäre eine Untersuchung verschiedener Bin-Größen für BSAH von Interesse, sowie unterschiedliche Abbruchkriterien bei der Konstruktion. 
 
 \newpage
 \chapter{Fazit}
-Der Fokus dieser Arbeit war die analytische Bewertung der Qualität von Top-Down konstruierten Wide BVHs in statischen 3D Szenen aufbauend auf serieller Berechnungen. Dabei gab es das Ziel herauszufinden, ob Wide BVH alleinig auf struktureller bzw. algorithmischer Ebene einen Vorteil gegenüber binärer BVHs innehaben, auch wenn der Vorteil der parallelisierten Berechnung wegfällt.
+Der Fokus dieser Arbeit war die analytische Bewertung der Qualität von Top-Down konstruierten Wide BVHs in statischen 3D Szenen basierend auf serieller Berechnungen. Dabei gab es das Ziel herauszufinden, ob Wide BVH alleinig auf struktureller bzw. algorithmischer Ebene einen Vorteil gegenüber binärer BVHs innehaben, auch wenn der Vorteil der parallelisierten Berechnung wegfällt.
 
 Im Rahmen der ersten Forschungsfrage zeigten die Messungen, dass $k = 4$ der einzig versuchte Verzweigungsgrad ist, der gegenüber $k = 2$ überhaupt potenzielle Verbesserungen in der Traversal-Time aufweist. Allerdings sind diese Ergebnisse nicht universell anwendbar, da die Speedups von leichten einbußen bis hin zu klaren Gewinnen reichen, mit Mittelwerten zwischen $0,932$ und $1,234$, wobei die Ergebnisse zwischen Nutzung von k-way splitting und collapsing variieren. Dabei ist zu erwähnen, dass der Median Split in Kombination mit collapsing für $k = 4$ immer Speedups unter $1$ generiert, während die beiden Heuristiken überwiegend Verbesserungen gegenüber der Referenz aufweisen. Für $k \ge 8$ verschlechtert sich die Traversal-Time konsistent über alle untersuchten Konfigurationen hinweg, was Wide BVH mit höheren Verzweigungsgraden insgesamt unattraktiv für die Verwendung in statischen Szenen bei serieller Berechnungen macht.
 
@@ -847,7 +847,7 @@ Damit ist die Empfehlung klar für größere $k$ auf eine durch k-way splitting 
 Für die Modellierung einer dynamischen Szene durch eine kombinierte Metrik aus \linebreak Construction- und Traversal-Time im Rahmen der letzten Forschungsfrage, zeigt sich ein stark differenziertes Bild. Für $k = 4$ liefert insgesamt im Durchschnitt die beste Verbesserung, wobei im Fall des collapsings der Median-Split ähnlich der ersten Forschungsfrage gegenüber der binären Referenz unterliegt. Für $k \ge 8$ unterliegt collapsing auch im dynamischen Modell konsequent. Für k-way splitting treten allerdings in einzelnen Konfigurationen, namentlich unter der Verwendung von BSAH in größeren Szenen, deutliche Verbesserungen gegenüber $k = 2$ auf. Dies lässt sich durch sinkende Construction-Times erklären, die im dynamsichen Modell die Gesamtzeit im Falle von k-way splitting stark beeinflussen.
 Damit kann man diese spezifische Konfiguration als klaren Gewinner im dynamischen Modell sehen. Währenddessen sollte auch hier die Nutzung von collapsing wegen seiner schlechten Traversal-Times für große $k$ vermieden werden. 
 
-Zusammengefasst lässt sich sagen, dass für die serielle Traversal auf der CPU in statsichen Szenen $k = 2$ nicht als robuster Standard abgelöst werden kann. Für Szenen oder Splitting-Algorithmen abhängige Algorithmen kann $k = 4$ sinnvoll sein. Allerdings sind $k \ge 8$ allgemein nicht zu empfehlen, genauso wie die Nutzung von collapsing in höheren Verzweigungsgraden. 
+Zusammengefasst lässt sich sagen, dass für die serielle Traversal auf der CPU in statsichen Szenen $k = 2$ nicht als robuster Standard abgelöst werden kann. Für Szenen oder Splitting-Algorithmen abhängige Anwendungen kann $k = 4$ sinnvoll sein. Allerdings sind $k \ge 8$ allgemein nicht zu empfehlen, genauso wie die Nutzung von collapsing in höheren Verzweigungsgraden. 
 
 Ein wichtiger nächster Schritt wäre die Messungen mit einer größeren Menge an Szenen mit höherer Polygonanzahl durchzuführen, um den Zusammenhang zwischen Szenengröße und Verzweigungsgrad näher zu ergründen. Gerade im dynamischen Modell unter Nutzung einer mit BSAH und k-way splitting erzeugten Wide BVH lassen sich noch viele mögliche Forschungsfragen klären.  
 Zudem wäre es interessant das Verhalten der BVHs unter der Nutzung von anderen Ray-Verteilungen durch beispielsweise Shader-Berechnung mit Hilfe von Sekundärstrahlen oder Ähnlichem zu beleuchten.
